# Wallstreet-PA

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
news_bot/: __init__.py  article_extractor.py  classifier.py  config.py  email_client.py  main.py  news_client.py  rss_client.py  script_generator.py  selection.py  summarizer.py  summary_validator.py  tts_engine.py
scripts/: run.sh  setup.sh
tests/: __init__.py  test_article_extractor.py  test_classifier.py  test_config.py  test_email_client.py  test_news_client.py  test_rss_client.py  test_script_generator.py  test_selection.py  test_summarizer.py  test_summary_validator.py  test_tts_engine.py
